--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <div class="welcome">
                     <div class="intro">
                         <div>
-                            <h2></h2>
+                            <h2>Welcome</h2>
                             <p>Saleem</p>
                         </div>
                         <img src="img/welcome.png" alt="" class="hide-mobile">
